--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: find_size
-description: A new Flutter package project.
-version: 0.0.1
+description: A Flutter plugin which helps you to easily find and track widget size.
+version: 1.0.0
 homepage: https://github.com/nishalsehan/find_size
 
 environment:
